[gd_scene load_steps=2 format=2]

[ext_resource path="res://mainmenu/options/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -66.0
margin_right = 83.5
margin_bottom = 66.0

[node name="FullScreenButton" type="CheckBox" parent="VBoxContainer"]
margin_right = 167.0
margin_bottom = 24.0
text = "Fullscreen"

[node name="BorderlessButton" type="CheckBox" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 167.0
margin_bottom = 52.0
text = "Borderless Fullscreen"

[node name="VSYNCButton" type="CheckBox" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 167.0
margin_bottom = 80.0
text = "Vsync"

[node name="FPSViewButton" type="CheckBox" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 167.0
margin_bottom = 108.0
text = "Display FPS"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 167.0
margin_bottom = 132.0
text = "Quit"

[connection signal="toggled" from="VBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_toggled"]
[connection signal="toggled" from="VBoxContainer/BorderlessButton" to="." method="_on_BorderlessButton_toggled"]
[connection signal="toggled" from="VBoxContainer/VSYNCButton" to="." method="_on_VSYNCButton_toggled"]
[connection signal="toggled" from="VBoxContainer/FPSViewButton" to="." method="_on_FPSViewButton_toggled"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
